[metadata]
name = multiplayer_poker
version = 0.0.1
license = MIT
description = poker_game
long_description = file: README.md
author = Pavlo
author_email = shvaikop02@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   tk>=0.1.0

[options.packages.find]
where=src
